--- a/assets/style.css
+++ b/assets/style.css
@@ -5,8 +5,14 @@
 body {
   background-color: #FAFAFA;
   font-size:
-  font-family: 'Roboto', sans-serif;
+  font-family:'Roboto', sans-serif;
 }
+.navbar{
+  font-size: 20px;
+  font-weight: 500;
+  color: #FAFAFA;
+}
+
 .section-heading{
   font-family: 'Dancing Script', cursive;
 
@@ -25,10 +31,9 @@ body {
   letter-spacing:2px;
   }
   
-  .btn{
-    margin-left:30%;
+  btn{
+    margin-left: 20%;
   }
-
   .page-section-about{
     margin-bottom:10px;
   }
@@ -85,4 +90,44 @@ body {
 .footer-area ul li i{
   margin-right: 10px;
 }
-  
+
+
+
+.facility-image img {
+  position: relative;
+  width: 100%;
+  height: auto;
+  justify-content: center;
+  border-radius: 0.25rem;
+}
+
+ .facility-info h2 {
+  text-align: center;
+  font-weight: 400;
+  margin: 0.7em 0;
+}
+
+
+.banner-image-facilities-container {
+  background: 
+  #2D3142 url("/assets/images/spapicture.jpg") fixed  no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+.banner-hero-image-container {
+  background: 
+  #2D3142 url("/assets/images/spapicture.jpg") fixed center no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+.banner-image-container {
+  height: 60vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
