modified layout of media details

--- a/assets/style.css
+++ b/assets/style.css
@@ -155,8 +155,15 @@ body {
   background-color:rgba(0, 0, 0, 0.5);
 }
 
-.wrapper{
-  
-}
 
+.contact-details span i {
+  font-size: 20px;
+  margin-right: 10px;
+  padding:10px;
+  background: #b5b5b8;
+  border-radius: 50%;
+}
+.contact-details span i:hover {
+  font-size:30px;
+}
 
