--- a/assets/style.css
+++ b/assets/style.css
@@ -1,17 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');
 
+body{
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
+}
 
-body {
-  background-color: #FAFAFA;
-  font-family:'Roboto', sans-serif;
-} 
 /* increase the size of logo, by using rem units, answer found on StackOverflow */
 .navbar-brand {
   position:relative;
   font-weight: 500;
   font-size: 2rem;
   left: 15px;
+  font-family:"Oswald", sans-serif;
 }
 .logo-icon{
   transform: rotate(30deg); 
@@ -27,18 +27,31 @@ body {
 
  }
    
+ .jumbotron .jumbotron-main-headings{
+  font-family:'Oswald', sans-serif;
+  font-weight: 400;
+  font-size:40px;
+  
+}
+.section-heading,.section-sub-heading{
+  font-family:'Oswald', sans-serif;
+  font-weight: 400;
+  font-size:40px;
 
-.section-heading{
-  font-family: 'Dancing Script', cursive;
+}
+.jumbotron .jumbotron-headings{
+  font-family:'Oswald', sans-serif;
+  font-weight: 400 bold;
+  font-size:40px;
+  color: #FAFAFA;
 
 }
 
-.heading-welcome-text{
-  margin-top: 30%;
-  font-family: 'Dancing Script', cursive;
-  font-size:30px;
-  letter-spacing:2px;
-  }
+.about-info{
+  font-family:'Lato', sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+}
   
   btn{
     margin-left: 20%;
