Text changes, added picture on home page

--- a/assets/style.css
+++ b/assets/style.css
@@ -57,10 +57,6 @@ body{
     margin-left: 20%;
   }
   
-
-  
-  
-  }
   .page-section-review{
     margin-bottom: 10%;
   }
@@ -265,4 +261,20 @@ background-color: #D3D3D3;
   background-color: #D3D3D3;
   margin: 4px;
   color:#0f0f0f;
+}
+
+.masage-benefits-container {
+  background-color: #3A462C;;
+  box-shadow: black;
+}
+.massage-benefits-content p{
+  margin-left: 50px;
+  margin-right: 50px;
+  background-color: #FAFAFA;
+}
+.benefits-heading{
+  font-family:'Oswald', sans-serif;
+  font-weight: 400;
+  font-size:40px;
+  color:#FAFAFA;
 }
