fixed non-responsive contact-form

--- a/assets/style.css
+++ b/assets/style.css
@@ -72,28 +72,7 @@ body{
     margin-bottom: 10%;
   }
 
-.spa-costumer-review {
-    font-size: 1.1em;
-    font-weight: 400;
-    font-family: "Roboto", sans-serif;
-    color: black;
-}
 
-.spa-costumer-image {
-    object-fit: cover;
-    border-radius: 50%;
-    
-}
-
-.carousel-inner .row {
-    margin: 0 -80px;
-    background-color:#FAFAFA ;
-}
-
-.carousel-control-prev,
-.carousel-control-next {
-    width: 25%;
-} 
 /*-------------------------------------------> Footer */
 .footer-area{
     color: #FAFAFA;
@@ -193,7 +172,7 @@ background-color: #D3D3D3;
 
 
 .banner-image-facilities-container {
-  background:url("images/facilities-hero-image.jpg") fixed center no-repeat;
+  background:url("images/facilities-hero-image.jpg") fixed center center no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -201,7 +180,7 @@ background-color: #D3D3D3;
  
 }
 .hero-home-image-container {
-  background:url("images/spapicture.jpg") fixed center no-repeat;
+  background:url("images/spapicture.jpg") fixed center center no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -209,7 +188,7 @@ background-color: #D3D3D3;
 }
 
 .banner-image-contact-container{
-  background:url("images/contact-hero-image.jpg") fixed center no-repeat;
+  background:url("images/contact-hero-image.jpg") fixed center center no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -285,3 +264,10 @@ background-color: #D3D3D3;
   font-weight:bold;
   font-size:30px;
 }
+
+.btn-contact{
+  background-color: #3A462C !important;
+  border-color: #3A462C;
+}
+
+
