--- a/assets/style.css
+++ b/assets/style.css
@@ -8,7 +8,6 @@ body{
 /*------------------------------->Nav bar */
 .navbar-brand {
   position:relative;
-  font-weight: 500;
   font-size: 2rem;
   left: 15px;
   font-family:"Oswald", sans-serif;
@@ -16,7 +15,7 @@ body{
 .logo-icon{
   transform: rotate(30deg); 
   background-color: rgba(214, 240, 154, 0.808);
-  margin-right: 15px;
+  margin-right: 5px;
   
 }
 /* Change the color of nav text by using !important, answer found on StackOverflow, user: dynamiclynk (https://stackoverflow.com/questions/24420080/change-navbar-text-color-bootstrap) */
@@ -223,7 +222,7 @@ background-color: #D3D3D3;
   background-size: cover;
 }
 .body-treatment-container{
-  background:url("/assets/images/massage-treatment-01.jpeg") fixed center center no-repeat;
+  background:url("images/massage-treatment-01.jpeg") fixed center center no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -337,4 +336,36 @@ background-color: #D3D3D3;
   border-color: #3A462C;
 }
 
+
+
+
+
+.ratings {
+  margin-right: 10px
+}
+
+.ratings i {
+  color: #cecece;
+  font-size: 30px;
+}
+
+.rating-color {
+  color: #fbc634 !important
+}
+
+.review-count {
+  font-weight: 400;
+  margin-bottom: 2px;
+  font-size: 24px !important
+}
+
+.small-ratings i {
+  color: #cecece
+}
+
+.review-stat {
+  font-weight: 300;
+  font-size: 18px;
+  margin-bottom: 2px
+}
 
