--- a/assets/style.css
+++ b/assets/style.css
@@ -144,9 +144,9 @@ html, body{
 
 
 .timetable-class-row{
-background-color: #D3D3D3;
+background-color: #3A462C;
     border: 3px solid #FAFAFA;
-    color: #141313;
+    color: #FAFAFA;
     text-align: center;
     border-radius: .5rem;
     padding: 15px;
@@ -229,6 +229,14 @@ background-color: #D3D3D3;
   background-size: cover;
 
 }
+.facilities-massage-banner-image{
+  background:url("images/facilities-massage-image.jpeg") fixed center center no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
+}
 
 .hero-images-headings{
   color:#FAFAFA;
@@ -292,18 +300,19 @@ background-color: #D3D3D3;
   display:flex;
   flex-direction:column;
 }
+
 .facilities-timetable #navTab a:hover,
 .facilities-timetable #navTab a:active,
 .facilities-timetable #navTab a:focus,
 .facilities-timetable #navTab a:active:focus {
-    color: #FAFAFA;
+    color:#080808;
     text-decoration: none;
-    background-color:#3A462C;
+    background-color:#FAFAFA;
 }
 .nav-tabs .nav-link {
-  background-color: #D3D3D3;
+  background-color: #3A462C;
   margin: 4px;
-  color:#0f0f0f;
+  color:#FAFAFA;
 }
 
 .masage-benefits-container {
